--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Eco Shop</title>
+  <title>EcoShop</title>
+  <meta name="title" content="EcoShop Online">
+  <meta name="description" content="This is related to website developed by IlysCode">
+  <!------favicons links------->
+  <link rel="shortcut icon" href="./images/flag1.png" type="image/png">
   <link rel="stylesheet" href="sass/index.css">
 </head>
 <body>
