--- a/index.html
+++ b/index.html
@@ -239,7 +239,147 @@
       </div>
       <a href="#">View All</a>
     </div>
+    <!---featured-product-container-wrapper-->
+    <div class="featured-product-container-wrapper">
+      <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">Promo!</div>
+        <img src="./images/product1 (1).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
     <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <img src="./images/product1 (2).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <img src="./images/product1 (3).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">5% Off</div>
+        <img src="./images/product1 (4).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <span class="old-price">GH₵: 6960.99</span>
+          <span class="new-price">GH₵: 6260.99</span>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">Sold</div>
+        <img src="./images/product1 (5).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <img src="./images/product1 (6).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">8% Off</div>
+        <img src="./images/product1 (7).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <span class="old-price">GH₵: 6990.99</span>
+          <span class="new-price">GH₵: 6160.99</span>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <img src="./images/product1 (8).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">Sold</div>
+        <img src="./images/product1 (9).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <img src="./images/product1 (10).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+    </div>
     </div>
 </section>
 
