--- a/index.html
+++ b/index.html
@@ -381,6 +381,69 @@
     </div>
     </div>
     </div>
+
+    <!-----SECTION4-CONTAINER------>
+    <div class="section4-container">
+      <div class="section4-deals-title">
+        <h2>Latest Products</h2>
+      </div>
+      <!--PRODUCT CONTAINER---->
+      <div class="latest-products-container">
+        <!----PRODUCTS---------->
+        <div class="latest-product">
+          <div class="latest-product-left">
+            <div class="latest-deal-off">15% Off</div>
+            <img src="./images/product1 (11).png" alt="">
+          </div>
+          <div class="latest-product-right">
+          Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="latest-btn" type="button">Check Out</button>
+          </div>
+        </div>
+
+
+        <!----PRODUCTS---------->
+        <div class="latest-product">
+          <div class="latest-product-left">
+            <img src="./images/product1 (12).png" alt="">
+          </div>
+          <div class="latest-product-right">
+          Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="latest-btn" type="button">Check Out</button>
+          </div>
+        </div>
+
+
+        <!----PRODUCTS---------->
+        <div class="latest-product">
+          <div class="latest-product-left">
+            <img src="./images/product1 (13).png" alt="">
+          </div>
+          <div class="latest-product-right">
+          Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="latest-btn" type="button">Check Out</button>
+          </div>
+        </div>
+
+
+        <!----PRODUCTS---------->
+        <div class="latest-product">
+          <div class="latest-product-left">
+            <div class="latest-deal-off">Promo!</div>
+            <img src="./images/product1 (14).png" alt="">
+          </div>
+          <div class="latest-product-right">
+          Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="latest-btn" type="button">Check Out</button>
+          </div>
+        </div>
+
+      </div>
+    </div>
 </section>
 
 <script src="script.js"></script>
