--- a/index.html
+++ b/index.html
@@ -379,6 +379,34 @@
           <button class="featured-btn" type="button">Check Out</button>
       </div>
     </div>
+
+      <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <img src="./images/product1 (15).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+      <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">Sold</div>
+        <img src="./images/product1 (16).png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
     </div>
     </div>
 
