--- a/index.html
+++ b/index.html
@@ -472,6 +472,50 @@
 
       </div>
     </div>
+
+    <!-----CUSTOMER-GUARANTEE--STICKER=---->
+    <div class="customer-guarantee">
+      <div class="customer-guarantee-container">
+        <div class="customer-left">
+          <img src="./images/customer-guarantee.jpg" alt="image">
+        </div>
+        <div class="customer-right">
+          Enter NOte here later
+        </div>
+      </div>
+    </div>
+
+    <!---OFFER PRODUCTS SECTION----->
+    <div class="section5-offer-products">
+      <div class="offer-container">
+        <div class="offer-product-left">
+          <div class="offer-deal-off">
+            <img src="./images/offer.jpg" alt="offer-image" loading="lazy">
+          </div>
+              Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="offer-btn" type="button">Check Out</button>
+        </div>
+      <div class="offer-product-right">
+        <img src="./images/product1 (23).jpg" alt="image">
+      </div>
+      </div>
+
+       <div class="offer-container">
+        <div class="offer-product-left">
+          <div class="offer-deal-off">
+            <img src="./images/offer.jpg" alt="offer-image" loading="lazy">
+          </div>
+              Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="offer-btn" type="button">Check Out</button>
+        </div>
+      <div class="offer-product-right">
+        <img src="./images/product1 (28).jpg" alt="image">
+      </div>
+      </div>
+
+    </div>
 </section>
 
 <script src="script.js"></script>
