--- a/index.html
+++ b/index.html
@@ -480,7 +480,19 @@
           <img src="./images/customer-guarantee.jpg" alt="image">
         </div>
         <div class="customer-right">
-          Enter NOte here later
+          At EcoShop, your satisfaction is our top priority. <br> That’s why we proudly offer you:
+
+ Secure Shopping:  Your payment details are 100% safe with us. <br>
+
+ Quality Assurance: Every product goes through strict quality checks before delivering to our Customers. <br>
+
+ Fast & Reliable Delivery: We work with trusted couriers to ensure your order arrives on time. <br>
+
+ Easy Returns: If you’re not fully satisfied, you can return your order within [X days] for a hassle-free refund or exchange. <br>
+
+ 24/7 Support: Our customer service team is always ready to help. <br>
+
+ We want you to shop with confidence, knowing you’re covered every step of the way.
         </div>
       </div>
     </div>
