--- a/index.html
+++ b/index.html
@@ -499,7 +499,9 @@
 
     <!---OFFER PRODUCTS SECTION----->
     <div class="section5-offer-products">
-      <div class="offer-container">
+      <div class="offer-banner">Hurry Up! Offer is Limited</div>
+      <div class="wrapper-container">
+        <div class="offer-container">
         <div class="offer-product-left">
           <div class="offer-deal-off">
             <img src="./images/offer.jpg" alt="offer-image" loading="lazy">
@@ -526,8 +528,84 @@
         <img src="./images/product1 (28).jpg" alt="image">
       </div>
       </div>
-
+      </div>
     </div>
+
+    <!----SECTION6---NEW ARRIVAL----->
+    <div class="new-arrival-container">
+        <div class="arrival-banner">
+          <img src="./images/newArrival1.jpg" alt="">
+        </div>
+        <div class="new-arrival-section-container">
+            <div class="new-arrival-products-container">
+        <div class="new-arrival-products-top">
+          <img src="./images/product1 (29).jpg" alt="">
+          <div class="arrival-title">
+            <div class="arrival-deal-off">New</div>
+            Hp Smart Laptop
+          </div>
+        </div>
+        <div class="new-arrival-products-bottom">
+          <div class="bottom-title-price">
+            <h3>GH₵: 6260.99</h3>
+          </div>
+          <button class="new-arrival-btn" type="button">Buy Now</button>
+        </div>
+      </div>
+
+      <div class="new-arrival-products-container">
+        <div class="new-arrival-products-top">
+          <img src="./images/product32.jpg" alt="">
+          <div class="arrival-title">
+            <div class="arrival-deal-off">New</div>
+            Hp Smart Laptop
+          </div>
+        </div>
+        <div class="new-arrival-products-bottom">
+          <div class="bottom-title-price">
+            <h3>GH₵: 6260.99</h3>
+          </div>
+          <button class="new-arrival-btn" type="button">Buy Now</button>
+        </div>
+      </div>
+
+      <div class="new-arrival-products-container">
+        <div class="new-arrival-products-top">
+          <img src="./images/product1 (29).jpg" alt="">
+          <div class="arrival-title">
+            <div class="arrival-deal-off">New</div>
+            Hp Smart Laptop
+          </div>
+        </div>
+        <div class="new-arrival-products-bottom">
+          <div class="bottom-title-price">
+            <h3>GH₵: 6260.99</h3>
+          </div>
+          <button class="new-arrival-btn" type="button">Buy Now</button>
+        </div>
+      </div>
+
+      <div class="new-arrival-products-container">
+        <div class="new-arrival-products-top">
+          <img src="./images/product1 (30).jpg" alt="">
+          <div class="arrival-title">
+            <div class="arrival-deal-off">New</div>
+            Hp Smart Laptop
+          </div>
+        </div>
+        <div class="new-arrival-products-bottom">
+          <div class="bottom-title-price">
+            <h3>GH₵: 6260.99</h3>
+          </div>
+          <button class="new-arrival-btn" type="button">Buy Now</button>
+        </div>
+      </div>
+      <!------END ROOT OF CONTAINERS---->
+        </div>
+        </div>
+    </div>
+
+
 </section>
 
 <script src="script.js"></script>
