--- a/index.html
+++ b/index.html
@@ -604,9 +604,15 @@
         </div>
         </div>
     </div>
-
-
 </section>
+
+<!------FOOTER-SECTION--------->
+<footer class="footer">
+  <div class="footer-left"></div>
+  <div class="footer-middle"></div>
+  <div class="footer-right"></div>
+</footer>
+<div class="copy-right"></div>
 
 <script src="script.js"></script>
 </body>
