--- a/index.html
+++ b/index.html
@@ -231,6 +231,50 @@
     </div>
   </div>
 
+  <!-------FLASH-DEAL--------->
+  <div class="flash-deal-container">
+    <div class="flash-deal-content">
+    <div class="flash-circle-left">
+      <div class="deal-flash">
+      <h3>FLASH</h3>
+      </div>
+        <div class="deal-flash-img">
+          <img src="./images/flag1.png" alt="image">
+        </div>
+    </div>
+    <div class="flash-product-container">
+      <div class="product-flash">
+        <div class="flash-top">
+          <img src="./images/women5.png" alt="imgage">
+        </div>
+        <div class="flash-bottom">
+            <div class="flash-title">
+              Hp Smart Laptop
+            </div>
+          <span class="old-price">GH₵: 6960.99</span>
+          <span class="new-price">GH₵: 6260.99</span>
+          <button class="flash-btn" type="button">Check Out</button>
+        </div>
+        </div>
+
+        <div class="product-flash">
+        <div class="flash-top">
+          <img src="./images/men11.png" alt="imgage">
+        </div>
+        <div class="flash-bottom">
+            <div class="flash-title">
+              Hp Smart Laptop
+            </div>
+          <span class="old-price">GH₵: 6960.99</span>
+          <span class="new-price">GH₵: 6260.99</span>
+          <button class="flash-btn" type="button">Check Out</button>
+        </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
+
   <!-----SECTION3-CONTAINER------->
   <div class="section3-container">
     <div class="featured-deals">
