--- a/index.html
+++ b/index.html
@@ -652,11 +652,40 @@
 
 <!------FOOTER-SECTION--------->
 <footer class="footer">
-  <div class="footer-left"></div>
-  <div class="footer-middle"></div>
-  <div class="footer-right"></div>
+  <div class="footer-left">
+    <div class="download-app">
+      <h3>Download Our App</h3>
+    </div>
+    <!---IMAGES--->
+    <img src="./images/download.jpg" alt="image">
+    <img src="./images/download2.jpg" alt="image">
+  </div>
+  <div class="footer-middle">
+    <div class="quick-links">
+      <h3>Quick Links</h3>
+    </div>
+    <!---links-->
+    <a href="#"><div class="h4">Men's Fashion</div></a>
+    <a href="#"><div class="h4">Women's Fashion</div></a>
+    <a href="#"><div class="h4">kid's Fashion</div></a>
+    <a href="#"><div class="h4">Health & Beauty</div></a>
+    <a href="#"><div class="h4">Accessories</div></a>
+    <a href="#"><div class="h4">Home & Kitchen</div></a>
+    <a href="#"><div class="h4">Baby & Toddler</div></a>
+  </div>
+  <div class="footer-right">
+      <div class="news-letter">
+        <h3>News Letter</h3>
+      </div>
+      <div class="input-email">
+        <input type="email" placeholder="Email" class="email-sent">
+      </div>
+    </div>
+  </div>
 </footer>
-<div class="copy-right"></div>
+<div class="copy-right">
+  </div>
+</div>
 
 <script src="script.js"></script>
 </body>
