--- a/index.html
+++ b/index.html
@@ -678,14 +678,23 @@
         <h3>News Letter</h3>
       </div>
       <div class="input-email">
-        <input type="email" placeholder="Email" class="email-sent">
+        Subscribe to get latest <br> updates
+        <input type="email" placeholder="Email...." class="email-sent">
+      </div>
+      <div class="social-icons">
+        <a href="#">
+          <img src="./social/faceb.png" alt="social-icons">
+          <img src="./social/whatsaap.png" alt="social-icons">
+        </a>
+      </div>
+      <!-----call us-->
+      <div class="call-us">
+      <a href="#"><img src="./social/social1 (3).png" alt="social-icon">Our Location</a>
       </div>
     </div>
+  </footer>
+  <div class="copy-right">
   </div>
-</footer>
-<div class="copy-right">
-  </div>
-</div>
 
 <script src="script.js"></script>
 </body>
