--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 
  Fast & Reliable Delivery: We work with trusted couriers to ensure your order arrives on time. <br>
 
- Easy Returns: If you’re not fully satisfied, you can return your order within [X days] for a hassle-free refund or exchange. <br>
+ Easy Returns: If you’re not fully satisfied, you can return your order within [Three days] for a hassle-free refund or exchange. <br>
 
  24/7 Support: Our customer service team is always ready to help. <br>
 
@@ -694,6 +694,9 @@
     </div>
   </footer>
   <div class="copy-right">
+      <p class="copyright">
+      <span aria-hidden="true">©</span> <span id="year-simple"></span> EcoShop GH. All rights reserved.
+    </p>
   </div>
 
 <script src="script.js"></script>
