--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
       </div>
       <!-----call us-->
       <div class="call-us">
-      <a href="#"><img src="./social/social1 (3).png" alt="social-icon">Our Location</a>
+      <a href="#"><img src="./social/social1 (3).png" alt="social-icon">Bono Region <br> (Sunyani)</a>
       </div>
     </div>
   </footer>
