--- a/index.html
+++ b/index.html
@@ -659,6 +659,12 @@
     <!---IMAGES--->
     <img src="./images/download.jpg" alt="image">
     <img src="./images/download2.jpg" alt="image">
+    <!---PRIVACY & POLICY----->
+    <div class="privacy-policy">
+      <a href="#">Privacy & Policy</a>
+      <a href="#">Terms & Conditions</a>
+      <a href="#">Contact Us</a>
+    </div>
   </div>
   <div class="footer-middle">
     <div class="quick-links">
