--- a/index.html
+++ b/index.html
@@ -671,6 +671,7 @@
       <h3>Quick Links</h3>
     </div>
     <!---links-->
+    <a href="index.html"><div class="home">Home Page</div></a>
     <a href="#"><div class="h4">Men's Fashion</div></a>
     <a href="#"><div class="h4">Women's Fashion</div></a>
     <a href="#"><div class="h4">kid's Fashion</div></a>
