--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
     </div>
 
     <div class="category-product">
+      <div class="category-top3">
+          <img src="./muslims/muslim13.png" alt="category-image">
+      </div>
+      <div class="category-bottom">
+        <div class="h4"><a href="#">Muslim's Section</a></div>
+      </div>
+    </div>
+
+    <div class="category-product">
       <div class="category-top4">
           <img src="./images/Health.jpg" alt="category-image">
       </div>
