--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="hero-text">
         <span>Delivered Fast</span>
       </div>
-      <span class="hero-sale">Sale</span>
+      <span class="hero-sale"></span>
       <div class="special-offer">
         <h3>Special Offers & New Arrivals</h3>
       </div>
@@ -672,8 +672,10 @@
     <div class="privacy-policy">
       <a href="#">Privacy & Policy</a>
       <a href="#">Terms & Conditions</a>
-      <a href="#">Contact Us</a>
     </div>
+    <div class="contact-us">
+        <a href="#">Contact Us</a>
+      </div>
   </div>
   <div class="footer-middle">
     <div class="quick-links">
