--- a/index.html
+++ b/index.html
@@ -44,16 +44,13 @@
       <button class="hero-btn" type="button">Start Shopping</button>
     </div>
     <div class="hero-right">
-      <div class="we-open">
-        <img src="./images/open.png" alt="">
-      </div>
       <div class="percent-off">
         UP TO
         <SPan>20%</SPan>
         Off
       </div>
       <div class="img-container">
-        <img src="./images/women1.png" alt="">
+        <img src="./social/hero-image.png" alt="">
       </div>
       <div class="hero-circle">
       </div>
@@ -68,73 +65,77 @@
   <div class="categories-container">
     <div class="category-product">
       <div class="category-top2">
-          <img src="./images/men6.png" alt="category-image">
+          <a href="men-Page.html">
+            <img src="./images/men6.png" alt="category-image">
+          </a>
       </div>
       <div class="category-bottom">
-        <a href="#"><div class="h4">Men's Fashion</div></a>
+        <a href="men-Page.html"><div class="h4">Men's Fashion</div></a>
       </div>
     </div>
 
     <div class="category-product">
       <div class="category-top2">
-          <img src="./images/women2.png" alt="category-image">
+          <a href="women-page.html">
+            <img src="./images/women2.png" alt="category-image">
+          </a>
       </div>
       <div class="category-bottom">
-        <a href="#"><div class="h4">Women's Fashion</div></a>
+        <a href="women-page.html"><div class="h4">Women's Fashion</div></a>
       </div>
     </div>
 
     <div class="category-product">
       <div class="category-top3">
-          <img src="./images/kids (13).png" alt="category-image">
+          <a href="kid-page.html"><img src="./images/kids (13).png" alt="category-image"></a>
       </div>
       <div class="category-bottom">
-        <div class="h4"><a href="#">Kid's Fashion</a></div>
+        <div class="h4"><a href="kid-page.html">Kid's Fashion</a></div>
       </div>
     </div>
 
     <div class="category-product">
       <div class="category-top3">
-          <img src="./muslims/muslim13.png" alt="category-image">
+          <a href="muslim-page.html"><img src="./muslims/muslim13.png" alt="category-image"></a>
       </div>
       <div class="category-bottom">
-        <div class="h4"><a href="#">Muslim's Section</a></div>
+        <div class="h4"><a href="muslim-page.html">Muslim's Section</a></div>
       </div>
     </div>
 
     <div class="category-product">
       <div class="category-top4">
-          <img src="./images/Health.jpg" alt="category-image">
+          <a href="health-beauty-page.html"><img src="./images/Health.jpg" alt="category-image"></a>
       </div>
       <div class="category-bottom">
-        <div class="h4"><a href="#">Health & Beauty</a></div>
+        <div class="h4"><a href="health-beauty-page.html">Health & Beauty</a></div>
       </div>
     </div>
 
     <div class="category-product">
       <div class="category-top5">
-          <img src="./images/watch2.jpg" alt="category-image">
+          <a href="accessories-page.html"><img src="./images/watch2.jpg" alt="category-image"></a>
       </div>
       <div class="category-bottom">
-        <div class="h4"><a href="#">Accessories</a></div>
+        <div class="h4"><a href="accessories-page.html">Accessories</a></div>
       </div>
     </div>
 
     <div class="category-product">
       <div class="category-top6">
-          <img src="./images/kitchen.png" alt="category-image">
+          <a href="home-kitchen-page.html"><img src="./images/kitchen.png" alt="category-image"></a>
       </div>
       <div class="category-bottom">
-        <div class="h4"><a href="#">Home & Kitchen</a></div>
+        <div class="h4"><a href="home-kitchen-page.html">Home & Kitchen</a></div>
       </div>
     </div>
 
     <div class="category-product">
       <div class="category-top7">
-          <img src="./images/kids (9).png" alt="category-image">
+          <a href="baby-toddler-page.html"><img src="./images/kids (9).png" alt="category-image"></a>
       </div>
       <div class="category-bottom">
-        <div class="h4"><a href="#">Baby & Toddler</a></div>
+        <div class="h4"><a href="baby-toddler-page.html">Baby & Toddler</a></div>
       </div>
     </div>
 
@@ -682,14 +683,14 @@
       <h3>Quick Links</h3>
     </div>
     <!---links-->
-    <a href="index.html"><div class="home">Home Page</div></a>
-    <a href="#"><div class="h4">Men's Fashion</div></a>
-    <a href="#"><div class="h4">Women's Fashion</div></a>
-    <a href="#"><div class="h4">kid's Fashion</div></a>
-    <a href="#"><div class="h4">Health & Beauty</div></a>
-    <a href="#"><div class="h4">Accessories</div></a>
-    <a href="#"><div class="h4">Home & Kitchen</div></a>
-    <a href="#"><div class="h4">Baby & Toddler</div></a>
+    <a href="men-Page.html"><div class="h4">Men's Fashion</div></a>
+    <a href="women-page.html"><div class="h4">Women's Fashion</div></a>
+    <a href="kid-page.html"><div class="h4">kid's Fashion</div></a>
+    <a href="muslim-page.html"><div class="h4">Muslim's </div></a>
+    <a href="health-beauty-page.html"><div class="h4">Health & Beauty</div></a>
+    <a href="accessories-page.html"><div class="h4">Accessories</div></a>
+    <a href="home-kitchen-page.html"><div class="h4">Home & Kitchen</div></a>
+    <a href="baby-toddler-page.html"><div class="h4">Baby & Toddler</div></a>
   </div>
   <div class="footer-right">
       <div class="news-letter">
