--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <div class="category-product">
       <div class="category-top4">
-          <a href="health-beauty-page.html"><img src="./images/Health.jpg" alt="category-image"></a>
+          <a href="health-beauty-page.html"><img src="./images/Health.png" alt="category-image"></a>
       </div>
       <div class="category-bottom">
         <div class="h4"><a href="health-beauty-page.html">Health & Beauty</a></div>
