--- a/muslim-page.html
+++ b/muslim-page.html
@@ -37,13 +37,12 @@
         <h4>Assalam Aleikum</h4>
       </div>
       <div class="hero-text">
-        <span>Modesty Meets Elegance</span>
+        <span>Modesty Meets <span class="elegance">Elegance</span></span>
       </div>
       <span class="hero-sale"></span>
       <div class="special-offer">
-        <h3>Pure. Ethical. Halal.</h3>
+        <h2>Pure. Ethical. Halal.</h2>
       </div>
-      <button class="hero-btn" type="button">Explore</button>
     </div>
     <div class="hero-right">
       <div class="percent-off">
@@ -60,7 +59,146 @@
   </section>
  
   <!------MAIN SECTION-------->
+  <!-----SECTION3-CONTAINER------->
+  <div class="section3-container">
+    <div class="featured-deals">
+      <div class="section-deals-title">
+        <h2>Abaaya Section</h2>
+      </div>
+    </div>
+    <!---featured-product-container-wrapper-->
+    <div class="featured-product-container-wrapper">
+      <!-------MAIN FEATURED DEALS------>
 
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">Promo!</div>
+        <img src="./muslims/muslim1.png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <img src="./muslims/muslim2.png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <img src="./muslims/muslim3.png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">5% Off</div>
+        <img src="./muslims/muslim5.png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <span class="old-price">GH₵: 6960.99</span>
+          <span class="new-price">GH₵: 6260.99</span>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">Sold</div>
+        <img src="./muslims/muslim6.png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <img src="./muslims/muslim8.png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">8% Off</div>
+        <img src="./muslims/muslim9.png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <span class="old-price">GH₵: 6990.99</span>
+          <span class="new-price">GH₵: 6160.99</span>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <img src="./muslims/muslim10.png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+
+    <!-------MAIN FEATURED DEALS------>
+
+    <div class="featured-product-container">
+      <div class="featured-product-top-show">
+        <div class="deal-off">Sold</div>
+        <img src="./muslims/muslim11.png" alt="">
+      </div>
+      <div class="featured-product-bottom">
+        Hp Smart Laptop
+          <h3>GH₵: 6260.99</h3>
+          <button class="featured-btn" type="button">Check Out</button>
+      </div>
+    </div>
+
+
+    <!-------Muslims Women Section Ends------>
+
+
+    </div>
+    </div>
 
 
 
