--- a/index.html
+++ b/index.html
@@ -147,23 +147,23 @@
       <p>Hurry Up! The Offer Is Limited</p>
       <div class="deal-timer">
         <div class="box">
-          28
-          <span>Days</span>
+          <span id="days">29</span>
+          <small>Days</small>
         </div>
         <h1>:</h1>
         <div class="box">
-          4
-          <span>Hours</span>
+          <span id="hours">4</span>
+          <small>Hours</small>
         </div>
         <h1>:</h1>
         <div class="box">
-          41
-          <span>Minutes</span>
+          <span id="minutes">41</span>
+          <small>minutes</small>
         </div>
         <h1>:</h1>
         <div class="box">
-          59
-          <span>Seconds</span>
+          <span id="seconds">59</span>
+          <small>Seconds</small>
         </div>
       </div>
     </div>
@@ -174,8 +174,10 @@
           <img src="./images/watch1.jpg" alt="">
         </div>
         <div class="product-bottom">
-          Smart Watch X Series
-          <h3>GH₵: 260.99</h3>
+          Smart Watch Touch
+          <span class="old-price">GH₵: 241.99</span>
+          <span class="new-price">GH₵: 180.99</span>
+          <button class="fast-deal-btn" type="button">Buy Now</button>
         </div>
       </div>
       <!------SECOND PRODUCT---->
@@ -185,7 +187,9 @@
         </div>
         <div class="product-bottom">
           Hp Smart <br> Laptop
-          <h3>GH₵: 6260.99</h3>
+          <span class="old-price">GH₵: 6960.99</span>
+          <span class="new-price">GH₵: 5760.99</span>
+          <button class="fast-deal-btn" type="button">Buy Now</button>
         </div>
       </div>
     </div>
@@ -203,8 +207,8 @@
           <img src="./images/featured1.jpg" alt="">
         </div>
         <div class="product-bottom">
-          Smart Watch X Series
-          <h3>GH₵: 260.99</h3>
+          Portable Neck Fan
+          <h3>GH₵: 140.96</h3>
         </div>
       </div>
       <!------SECOND PRODUCT---->
@@ -213,8 +217,8 @@
           <img src="./images/featured2.png" alt="fast-deal">
         </div>
         <div class="product-bottom">
-          Hp Smart <br> Laptop
-          <h3>GH₵: 6260.99</h3>
+          Fast Magnetic <br> Charger
+          <h3>GH₵: 230.9</h3>
         </div>
       </div>
 
@@ -224,18 +228,18 @@
           <img src="./images/featured3.jpg" alt="">
         </div>
         <div class="product-bottom">
-          Smart Watch X Series
-          <h3>GH₵: 260.99</h3>
+          Commercial Blender
+          <h3>GH₵: 830.99</h3>
         </div>
       </div>
       <!------SECOND PRODUCT---->
       <div class="featured-deal-product">
         <div class="product-top">
-          <img src="./images/shoe1.png" alt="fast-deal">
+          <img src="./images/product1 (30).jpg" alt="fast-deal">
         </div>
         <div class="product-bottom">
-          Hp Smart <br> Laptop
-          <h3>GH₵: 6260.99</h3>
+          Multipurpose Anti-Vibration... <br> 
+          <h3>GH₵: 120.96</h3>
         </div>
       </div>
     </div>
@@ -255,7 +259,7 @@
     <div class="flash-product-container">
       <div class="product-flash">
         <div class="flash-top">
-          <img src="./images/women5.png" alt="imgage">
+          <img src="./images/women2.png" alt="imgage">
         </div>
         <div class="flash-bottom">
             <div class="flash-title">
