--- a/index.html
+++ b/index.html
@@ -259,25 +259,25 @@
     <div class="flash-product-container">
       <div class="product-flash">
         <div class="flash-top">
-          <img src="./images/women2.png" alt="imgage">
+          <img src="./accessories-images/access1.jpg" alt="imgage">
         </div>
         <div class="flash-bottom">
             <div class="flash-title">
-              Hp Smart Laptop
+              Portable Turbine Washing Machine
             </div>
-          <span class="old-price">GH₵: 6960.99</span>
-          <span class="new-price">GH₵: 6260.99</span>
+          <span class="old-price">GH₵: 230.09</span>
+          <span class="new-price">GH₵: 210.99</span>
           <button class="flash-btn" type="button">Check Out</button>
         </div>
         </div>
 
         <div class="product-flash">
         <div class="flash-top">
-          <img src="./images/men11.png" alt="imgage">
+          <img src="./accessories-images/access2.jpg" alt="imgage">
         </div>
         <div class="flash-bottom">
             <div class="flash-title">
-              Hp Smart Laptop
+              
             </div>
           <span class="old-price">GH₵: 6960.99</span>
           <span class="new-price">GH₵: 6260.99</span>
