--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <div class="flash-title">
               Portable Turbine Washing Machine
             </div>
-          <span class="old-price">GH₵: 230.09</span>
+          <span class="old-price">GH₵: 250.09</span>
           <span class="new-price">GH₵: 210.99</span>
           <button class="flash-btn" type="button">Check Out</button>
         </div>
@@ -273,14 +273,14 @@
 
         <div class="product-flash">
         <div class="flash-top">
-          <img src="./accessories-images/access2.jpg" alt="imgage">
+          <img src="./accessories-images/access2.png" alt="imgage">
         </div>
         <div class="flash-bottom">
             <div class="flash-title">
-              
+              Shower Candy 
             </div>
-          <span class="old-price">GH₵: 6960.99</span>
-          <span class="new-price">GH₵: 6260.99</span>
+          <span class="old-price">GH₵: 460.99</span>
+          <span class="new-price">GH₵: 409.99</span>
           <button class="flash-btn" type="button">Check Out</button>
         </div>
         </div>
