--- a/index.html
+++ b/index.html
@@ -688,6 +688,7 @@
     </div>
     <!---links-->
     <a href="men-Page.html"><div class="h4">Men's Fashion</div></a>
+    <a href="login.html"><div class="h4">Admin Login</div></a>
     <a href="women-page.html"><div class="h4">Women's Fashion</div></a>
     <a href="kid-page.html"><div class="h4">kid's Fashion</div></a>
     <a href="muslim-page.html"><div class="h4">Muslim's </div></a>
